agp fix single view sticky header z-index issue

--- a/gpfjs/src/app/autism-gene-profiles-single-view/autism-gene-profile-single-view.component.css
+++ b/gpfjs/src/app/autism-gene-profiles-single-view/autism-gene-profile-single-view.component.css
@@ -120,6 +120,7 @@ td {
   display: flex;
   align-items: center !important;
   justify-content: center;
+  z-index: 1;
 }
 
 h2 {
